# smartgate-ai

./: .env.example  .gitignore  Procfile  README.md  USAGE.md  pyproject.toml  requirements.txt
examples/: flower_example.py  test_smartgate.py
smartgate/: __init__.py  ai.py  core.py  pipeline.py  storage.py
smartgate/templates/: instructions.txt
