[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "smartgate-ai"
version = "0.1.0"
description = "AI powered semantic firewall for databases"
authors = [{name = "Muhammad Ali Kasana", email = "malikasana2810@gmail.com"}]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi",
    "uvicorn",
    "python-dotenv",
    "requests",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["smartgate*"]